# LLMKernel

./: .env.debug  .env.example  .gitignore  .llm-kernel.example.json  DEBUGGING.md  LiteLLM_Jupyter_Kernel_Context_Management_bf7ff52c_2025-07-03T04-18-29-802Z.md  QUICKSTART.md  README.md  TODO.md  Untitled.ipynb  check_kernel_env.py  clear_notebook_outputs.py  debug_kernel.ipynb  debug_kernel.json  demo_reranking.ipynb  example.ipynb  example_notebook_path_usage.py  kernel.json  magic_guide.md  mcp-config.example.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  start_console.bat  start_jupyter.bat  test_chat_magic.py  test_chat_mode.ipynb  test_clipboard.py  test_file_paste.py  test_kernel.py  test_kernel_import.py  test_magic_output.py  test_multimodal_display.py  test_notebook_context.ipynb  test_notebook_pdf_upload.py  test_openai_assistant_pdf.py  test_pdf_paste.py  vscode_extension_design.md  vscode_seamless_integration.md
.ipynb_checkpoints/: test_cell_magic2-checkpoint.ipynb  test_magic_debug-checkpoint.ipynb
debug/: debug_kernel.ipynb
demos/: debug_kernel.ipynb  demo_chat_features.ipynb  demo_context_persistence.ipynb  demo_hide_cells.ipynb  demo_mcp.ipynb  demo_multimodal.ipynb  demo_notebook_context.ipynb  demo_pdf_native_upload.ipynb  demo_reranking.ipynb  demo_reranking_old.ipynb
demos/.ipynb_checkpoints/: demo_chat_features-checkpoint.ipynb  demo_reranking-checkpoint.ipynb
docs/: TODO.md  magic_guide.md
llm_kernel/: __init__.py  __main__.py  _attrs.py  _diagnostics.py  _kernel_hooks.py  _mitm_addon.py  _otlp_log_handler.py  _provisioning.py  _rfc_schemas.py  agent_supervisor.py  anthropic_file_integration.py  anthropic_passthrough.py  app.py  auth_handlers.py  cell_manager.py  cell_text.py  clipboard_utils.py  config_manager.py  context_manager.py  context_packer.py  custom_messages.py  dialogue_pruner.py  drift_detector.py  event_log.py  file_actions.py  file_cache_manager.py  file_upload_manager.py  gemini_file_integration.py  inline_agent.py  install.py  kernel.py  litellm_proxy.py  llm_integration.py  magic_emit_tool.py  magic_generators.py  magic_hash.py  magic_registry.py  mcp_manager.py  mcp_server.py  metadata_writer.py  (+12 more)
llm_kernel/intent_handlers/: __init__.py  promote_stream_magic.py
llm_kernel/magic_commands/: __init__.py  base.py  config.py  context.py  mcp.py  multimodal.py  multimodal_native_pdf.py  reranking.py
llm_kernel/wire/: __init__.py  export.py  families.py  tools.py  version.py
llm_kernel/wire/schemas/: __init__.py  family-a.json  family-b.json  family-c.json  family-f.json  family-g.json  handshake.request.json  handshake.response.json  tool.ask.input.json  tool.ask.output.json  (+23 more)
profile_default/: history.sqlite
tests/: .env.test  README.md  check_multimodal.py  conftest.py  debug_pdf_context.py  debug_pdf_upload.py  demo_chat_features.ipynb  notebook_path_methods.py  run_pdf_tests.py  test_acknowledge_drift.py  test_agent_graph_handler_registered.py  test_agent_graph_round_trip.py  test_agent_supervisor.py  test_all_magics.ipynb  test_auth_magics.py  test_cell_kinds_s05.py  test_cell_magic2.ipynb  test_cell_manager_contamination_gates.py  test_cell_manager_restamp.py  test_cell_manager_running_gates.py  test_cell_manager_text_ops.py  test_cell_text_parser.py  test_chat_mode_issue.py  test_contamination_detector.py  test_context_packer.py  test_custom_messages.py  test_debug.ipynb  test_drift_acknowledge_dispatch.py  test_drift_detector.py  test_event_log_replay.py  test_event_log_round_trip.py  test_file_actions_export.py  test_generator_agent_emitted_blocked.py  test_generator_emission_path.py  test_generator_expand.py  test_generator_hashmode.py  test_generator_import.py  test_generator_provenance.py  test_generator_template.py  test_hang_watchdog.py  (+71 more)
tests/.ipynb_checkpoints/: demo_chat_features-checkpoint.ipynb  test_notebook-checkpoint.ipynb  test_reorganization-checkpoint.ipynb
tests/markov/: README.md  __init__.py  conftest.py  faults.py  harness.py  invariants.py  replay.py  scenarios.py  test_invariants.py  test_scenarios.py
vscode-llm-kernel-extension/: .eslintrc.json  .vscodeignore  README.md  TESTING_GUIDE.md  TEST_GUIDE.md  package-lock.json  package.json  roadmap.md  test-extension.sh  test-with-vscode.sh  tsconfig.json  verify-implementation.js  webpack.config.js
vscode-llm-kernel-extension/src/: extension.ts
vscode-llm-kernel-extension/test-workspace/: test-notebook.ipynb
(+43 files in other folders)
